Added Search Feature to filter by Date and Error Page Added

--- a/src/index.css
+++ b/src/index.css
@@ -31,3 +31,11 @@ body {
 .swal-button--danger:hover {
   background-color: red !important;
 }
+
+.menu li > *:not(ul, .menu-title, details, .btn):active,
+.menu li > *:not(ul, .menu-title, details, .btn).active,
+.menu li > details > summary:active {
+  background-color: transparent !important;
+  color: #32c1ce;
+  border-bottom: 2px solid #32c1ce;
+}
